--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A restful api",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles",
     "start": "nodemon server.js"
   },
   "author": "Olaonipekun Carew",
@@ -19,6 +19,10 @@
     "multer": "^1.4.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "chai": "^4.2.0",
+    "jest": "^26.2.2",
+    "mocha": "^8.1.0",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   }
 }
